# FileNameStandardizer

./: .funcignore  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  function_app.py  main.py  pyproject.toml  requirements.txt  standardizer.py  test_domain.py
.github/workflows/: cd-deploy-functionapp-dev.yml  cd-terraform-infra-dev.yml  ci-test.yml  ci.yml  deploy-functionapp.yml  deploy.yml  main_func-media-organizer.yml  main_func-standardizer-b7243e3c.yml  main_func-standardizer.yml  terraform-infra.yml
docs/: data-sync-workflow.drawio
filenamestandardizer/: domain.py  storage.py
function/: function_app.py  requirements.txt
infra/: .terraform.lock.hcl  README.md  dev.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: clean-up.sh  copy-to-landing-zone.sh  create-source-files.sh  deploy-functionapp.sh  deployment-smoke-test.sh  function-creation.sh  github-integration.sh  role-assignment.sh
scripts/upload/: android_dcim.py  android_upload_gui.py  local_upload_gui.py  run_local_upload.sh
tests/: conftest.py  test_domain.py  test_standardizer.py  test_storage.py
